profilelist1exp/unpackaged/objects/PartnerRepMaintenance__c.object
<CustomObject>
    <description>Partner Role and Group - data pushed from Informatica</description>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Role_Id__c</fullName>
        <label>Parent Role Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Role_Name__c</fullName>
        <label>Parent Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Id__c</fullName>
        <label>Role Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharing_Rule_API_Name__c</fullName>
        <label>Sharing Rule API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Rep Maintenance</label>
    <nameField>
        <displayFormat>PRM-{000000000}</displayFormat>
        <label>Partner Rep Maintenance Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Rep Maintenances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>